20011024
 - (bal) Should be 3.0p1 not 3.0p2.  Corrected version.h already.
 - (tim) configure.in -> configure.ac

20011023
 - (bal) Updated version to 3.0p1 in preparing for release.
 - (bal) Added 'PAM_TTY_KLUDGE' to Solaris platform.
 - (tim) [configure.in] Fix test for broken dirname. Based on patch from
	 Dave Dykstra <dwd@bell-labs.com>. Remove un-needed test for zlib.h.
	 [contrib/caldera/openssh.spec, contrib/redhat/openssh.spec,
	 contrib/suse/openssh.spec] Update version to match version.h

20011022
 - (djm) Fix fd leak in loginrec.c (ro fd to lastlog was left open).
   Report from Michal Zalewski <lcamtuf@coredump.cx>

20011021
 - (tim) [configure.in] Clean up library testing. Add optional PATH to
	 --with-pcre, --with-zlib, and --with-tcp-wrappers. Based on
	 patch by albert chin (china@thewrittenword.com)
	 Re-arange AC_CHECK_HEADERS and AC_CHECK_FUNCS for eaiser reading
	 of patches to configure.in. Replace obsolete AC_STRUCT_ST_BLKSIZE
	 with AC_CHECK_MEMBERS. Add test for broken dirname() on
	 Solaris 2.5.1 by Dan Astoorian <djast@cs.toronto.edu>
	 [acconfig.h aclocal.m4 defines.h configure.in] Better socklen_t test.
	 patch by albert chin (china@thewrittenword.com)
	 [scp.c] Replace obsolete HAVE_ST_BLKSIZE with
	 HAVE_STRUCT_STAT_ST_BLKSIZE.
	 [Makefile.in] When running make in top level, always do make
	 in openbsd-compat. patch by Dave Dykstra <dwd@bell-labs.com>

20011019
 - (bal) Fixed up init.d symlink issue and piddir stuff.  Patches by
   Zoran Milojevic <Zoran.Milojevic@SS8.com> and j.petersen@msh.de 

20011012
 - (djm) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2001/10/10 22:18:47
     [channels.c channels.h clientloop.c nchan.c serverloop.c]
     [session.c session.h]
     try to keep channels open until an exit-status message is sent.
     don't kill the login shells if the shells stdin/out/err is closed.
     this should now work:
     ssh -2n localhost 'exec > /dev/null 2>&1; sleep 10; exit 5'; echo ?